Source/WTF/wtf/Vector.h
@@ -287,7 +287,6 @@ public:
             CRASH();
         size_t sizeToAllocate = newCapacity * sizeof(T);
         m_capacity = sizeToAllocate / sizeof(T);
-        updateMask();
         m_buffer = static_cast<T*>(Malloc::malloc(sizeToAllocate));
     }
 
@@ -302,7 +301,6 @@ public:
         if (!newBuffer)
             return false;
         m_capacity = sizeToAllocate / sizeof(T);
-        updateMask();
         m_buffer = newBuffer;
         return true;
     }
@@ -319,7 +317,6 @@ public:
             CRASH();
         size_t sizeToAllocate = newCapacity * sizeof(T);
         m_capacity = sizeToAllocate / sizeof(T);
-        updateMask();
         m_buffer = static_cast<T*>(Malloc::realloc(m_buffer, sizeToAllocate));
     }
 
@@ -331,7 +328,6 @@ public:
         if (m_buffer == bufferToDeallocate) {
             m_buffer = 0;
             m_capacity = 0;
-            m_mask = 0;
         }
 
         Malloc::free(bufferToDeallocate);
@@ -347,7 +343,6 @@ public:
         T* buffer = m_buffer;
         m_buffer = 0;
         m_capacity = 0;
-        m_mask = 0;
         return adoptMallocPtr(buffer);
     }
 
@@ -356,7 +351,6 @@ protected:
         : m_buffer(0)
         , m_capacity(0)
         , m_size(0)
-        , m_mask(0)
     {
     }
 
@@ -364,9 +358,7 @@ protected:
         : m_buffer(buffer)
         , m_capacity(capacity)
         , m_size(size)
-        , m_mask(0)
     {
-        updateMask();
     }
 
     ~VectorBufferBase()
@@ -374,15 +366,9 @@ protected:
         // FIXME: It would be nice to find a way to ASSERT that m_buffer hasn't leaked here.
     }
 
-    void updateMask()
-    {
-        m_mask = maskForSize(m_capacity);
-    }
-
     T* m_buffer;
     unsigned m_capacity;
     unsigned m_size; // Only used by the Vector subclass, but placed here to avoid padding the struct.
-    unsigned m_mask;
 };
 
 template<typename T, size_t inlineCapacity, typename Malloc>
@@ -415,7 +401,6 @@ public:
     {
         std::swap(m_buffer, other.m_buffer);
         std::swap(m_capacity, other.m_capacity);
-        std::swap(m_mask, other.m_mask);
     }
     
     void restoreInlineBufferIfNeeded() { }
@@ -440,7 +425,6 @@ public:
     using Base::releaseBuffer;
 
 protected:
-    using Base::m_mask;
     using Base::m_size;
 
 private:
@@ -479,7 +463,6 @@ public:
         else {
             m_buffer = inlineBuffer();
             m_capacity = inlineCapacity;
-            updateMask();
         }
     }
 
@@ -489,7 +472,6 @@ public:
             return Base::tryAllocateBuffer(newCapacity);
         m_buffer = inlineBuffer();
         m_capacity = inlineCapacity;
-        updateMask();
         return true;
     }
 
@@ -517,23 +499,19 @@ public:
         if (buffer() == inlineBuffer() && other.buffer() == other.inlineBuffer()) {
             swapInlineBuffer(other, mySize, otherSize);
             std::swap(m_capacity, other.m_capacity);
-            std::swap(m_mask, other.m_mask);
         } else if (buffer() == inlineBuffer()) {
             m_buffer = other.m_buffer;
             other.m_buffer = other.inlineBuffer();
             swapInlineBuffer(other, mySize, 0);
             std::swap(m_capacity, other.m_capacity);
-            std::swap(m_mask, other.m_mask);
         } else if (other.buffer() == other.inlineBuffer()) {
             other.m_buffer = m_buffer;
             m_buffer = inlineBuffer();
             swapInlineBuffer(other, 0, otherSize);
             std::swap(m_capacity, other.m_capacity);
-            std::swap(m_mask, other.m_mask);
         } else {
             std::swap(m_buffer, other.m_buffer);
             std::swap(m_capacity, other.m_capacity);
-            std::swap(m_mask, other.m_mask);
         }
     }
 
@@ -543,7 +521,6 @@ public:
             return;
         m_buffer = inlineBuffer();
         m_capacity = inlineCapacity;
-        updateMask();
     }
 
 #if ASAN_ENABLED
@@ -571,13 +548,11 @@ public:
     }
 
 protected:
-    using Base::m_mask;
     using Base::m_size;
 
 private:
     using Base::m_buffer;
     using Base::m_capacity;
-    using Base::updateMask;
     
     void swapInlineBuffer(VectorBuffer& other, size_t mySize, size_t otherSize)
     {
@@ -713,23 +688,23 @@ public:
     {
         if (UNLIKELY(i >= size()))
             OverflowHandler::overflowed();
-        return Base::buffer()[i & m_mask];
+        return Base::buffer()[i];
     }
     const T& at(size_t i) const 
     {
         if (UNLIKELY(i >= size()))
             OverflowHandler::overflowed();
-        return Base::buffer()[i & m_mask];
+        return Base::buffer()[i];
     }
     T& at(Checked<size_t> i)
     {
         RELEASE_ASSERT(i < size());
-        return Base::buffer()[i & m_mask];
+        return Base::buffer()[i];
     }
     const T& at(Checked<size_t> i) const
     {
         RELEASE_ASSERT(i < size());
-        return Base::buffer()[i & m_mask];
+        return Base::buffer()[i];
     }
 
     T& operator[](size_t i) { return at(i); }
@@ -873,7 +848,6 @@ private:
 
     void asanBufferSizeWillChangeTo(size_t);
 
-    using Base::m_mask;
     using Base::m_size;
     using Base::buffer;
     using Base::capacity;
