Source/WTF/wtf/text/StringView.h
@@ -159,8 +159,6 @@ private:
 
     void initialize(const LChar*, unsigned length);
     void initialize(const UChar*, unsigned length);
-    void initialize(const LChar*, unsigned length, unsigned mask);
-    void initialize(const UChar*, unsigned length, unsigned mask);
 
     template<typename CharacterType, typename MatchedCharacterPredicate>
     StringView stripLeadingAndTrailingMatchedCharacters(const CharacterType*, const MatchedCharacterPredicate&);
@@ -178,7 +176,6 @@ private:
 
     const void* m_characters { nullptr };
     unsigned m_length { 0 };
-    unsigned m_mask { 0 };
     bool m_is8Bit { true };
 
 #if CHECK_STRINGVIEW_LIFETIME
@@ -231,7 +228,6 @@ inline StringView::~StringView()
 inline StringView::StringView(StringView&& other)
     : m_characters(other.m_characters)
     , m_length(other.m_length)
-    , m_mask(other.m_mask)
     , m_is8Bit(other.m_is8Bit)
 {
     ASSERT(other.underlyingStringIsValid());
@@ -245,7 +241,6 @@ inline StringView::StringView(StringView&& other)
 inline StringView::StringView(const StringView& other)
     : m_characters(other.m_characters)
     , m_length(other.m_length)
-    , m_mask(other.m_mask)
     , m_is8Bit(other.m_is8Bit)
 {
     ASSERT(other.underlyingStringIsValid());
@@ -259,7 +254,6 @@ inline StringView& StringView::operator=(StringView&& other)
 
     m_characters = other.m_characters;
     m_length = other.m_length;
-    m_mask = other.m_mask;
     m_is8Bit = other.m_is8Bit;
 
     other.clear();
@@ -276,7 +270,6 @@ inline StringView& StringView::operator=(const StringView& other)
 
     m_characters = other.m_characters;
     m_length = other.m_length;
-    m_mask = other.m_mask;
     m_is8Bit = other.m_is8Bit;
 
     setUnderlyingString(other);
@@ -287,27 +280,15 @@ inline StringView& StringView::operator=(const StringView& other)
 
 inline void StringView::initialize(const LChar* characters, unsigned length)
 {
-    initialize(characters, length, maskForSize(length));
+    m_characters = characters;
+    m_length = length;
+    m_is8Bit = true;
 }
 
 inline void StringView::initialize(const UChar* characters, unsigned length)
 {
-    initialize(characters, length, maskForSize(length));
-}
-
-inline void StringView::initialize(const LChar* characters, unsigned length, unsigned mask)
-{
     m_characters = characters;
     m_length = length;
-    m_mask = mask;
-    m_is8Bit = true;
-}
-
-inline void StringView::initialize(const UChar* characters, unsigned length, unsigned mask)
-{
-    m_characters = characters;
-    m_length = length;
-    m_mask = mask;
     m_is8Bit = false;
 }
 
@@ -330,9 +311,9 @@ inline StringView::StringView(const StringImpl& string)
 {
     setUnderlyingString(&string);
     if (string.is8Bit())
-        initialize(string.characters8(), string.length(), string.mask());
+        initialize(string.characters8(), string.length());
     else
-        initialize(string.characters16(), string.length(), string.mask());
+        initialize(string.characters16(), string.length());
 }
 
 inline StringView::StringView(const StringImpl* string)
@@ -342,9 +323,9 @@ inline StringView::StringView(const StringImpl* string)
 
     setUnderlyingString(string);
     if (string->is8Bit())
-        initialize(string->characters8(), string->length(), string->mask());
+        initialize(string->characters8(), string->length());
     else
-        initialize(string->characters16(), string->length(), string->mask());
+        initialize(string->characters16(), string->length());
 }
 
 inline StringView::StringView(const String& string)
@@ -355,10 +336,10 @@ inline StringView::StringView(const String& string)
         return;
     }
     if (string.is8Bit()) {
-        initialize(string.characters8(), string.length(), string.mask());
+        initialize(string.characters8(), string.length());
         return;
     }
-    initialize(string.characters16(), string.length(), string.mask());
+    initialize(string.characters16(), string.length());
 }
 
 inline StringView::StringView(const AtomicString& atomicString)
@@ -370,7 +351,6 @@ inline void StringView::clear()
 {
     m_characters = nullptr;
     m_length = 0;
-    m_mask = 0;
     m_is8Bit = true;
 }
 
@@ -459,8 +439,8 @@ inline UChar StringView::operator[](unsigned index) const
 {
     ASSERT(index < length());
     if (is8Bit())
-        return characters8()[index & m_mask];
-    return characters16()[index & m_mask];
+        return characters8()[index];
+    return characters16()[index];
 }
 
 inline bool StringView::contains(UChar character) const
